# click_loguru

./: .codacy.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.rst  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
click_loguru/: __init__.py
tests/: __init__.py  other_module.py  simple.py  test_click_loguru.py
